--- a/src/data/menu.yml
+++ b/src/data/menu.yml
@@ -9,14 +9,14 @@
   label: for-authors
 - category_name: 参加募集
   pages:
-  - name: 参加募集(準備中)
-    url: "./"
+  - name: 参加募集
+    url: "./call-for-participants.html"
   - name: 表紙デザイン募集
     url: "./design-competition.html"
-  - name: WISS Challenge募集(準備中)
-    url: "./"
-  - name: 学生アルバイト募集(準備中)
-    url: "./"
+  - name: WISS Challenge募集
+    url: "./challenge.html"
+  - name: 学生ボランティア募集
+    url: "./call-for-studentvolunteer.html"
   label: for-participants
 - category_name: プログラム
   pages:
