--- a/src/data/menu.yml
+++ b/src/data/menu.yml
@@ -11,6 +11,8 @@
   pages:
   - name: 参加募集
     url: "./call-for-participants.html"
+  - name: 参加形態と新型コロナ対策について
+    url: "./covid19d.html"
   - name: 表紙デザイン募集
     url: "./design-competition.html"
   - name: WISS Challenge募集
